# Carebridge

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  carebridge-dashboard.jsx  docker-compose.yml  pyproject.toml
frontend/nextjs-dashboard/: package-lock.json  package.json
frontend/nextjs-dashboard/public/: discharge-sample-format.txt
frontend/nextjs-dashboard/src/app/: layout.tsx  page.tsx
frontend/nextjs-dashboard/src/components/: risk-badge.tsx  severity-badge.tsx
frontend/nextjs-dashboard/src/lib/: api.ts  datetime.ts  demo-patient.ts  doctor-context.tsx  patient-utils.ts
infra/: Dockerfile  Dockerfile.frontend  docker-compose.yml
scripts/: check_twilio_tunnel.py  demo_flow.py  seed_data.py  seed_sqlite_demo.py  trigger_followup.py
services/brain_agent/: Untitled  config.py  graph.py  llm.py  main.py  nodes.py
services/communication_agent/: ai_interpreter.py  appointment_handler.py  config.py  elevenlabs_tts.py  followup_db.py  main.py  ngrok_compat.py  twilio_client.py  webhooks.py
services/db_agent/: config.py  crud.py  handlers.py  main.py  seed_demo.py  seed_doctor_slots.py
services/scheduler/: config.py  jobs.py  main.py
shared/: cache.py  config.py  demo_seed_data.py  logging.py  questionnaire_defaults.py  service_urls.py
shared/db/: engine.py  models.py
shared/db/migrations/: env.py
shared/db/migrations/versions/: 97ec1ad9d5d8_initial_schema.py  a3f2c1d4e5b6_add_doctor_schedule.py  b2c4e8a1f3d0_followup_job_correlation.py  (+1 more)
shared/events/: bus.py  contracts.py
shared/schemas/: models.py
(+12 files in other folders)
