[project]
name = "carebridge"
version = "0.1.0"
description = "Multi-agent event-driven healthcare follow-up system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "aio-pika>=9.5.0",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langgraph>=0.2.60",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "apscheduler>=3.10.0",
    "twilio>=9.4.0",
    "elevenlabs>=1.0.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "shared"]
